x2goclient (3.99.3.1-0~x2go1) UNRELEASED; urgency=low

  [ Christoffer Krakou ]
  * New upstream version (3.99.3.1):
    - Update Danish translation.

  [ Daniel Lindgren ]
  * New upstream version (3.99.3.1):
    - Update Swedish translation.

  [ Jan Engelhardt ]
  * New upstream version (3.99.3.1):
    - Fix Debian-like Qt path (qmake will handle it internally).

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.3.1):
    - Translation files updated.
    - Russian translation updated.
    - Add support for pgp cards in broker mode.
    - Fix displaying ssh proxy box in session settings if sessions type
      changed. (Closes upstream issue: #61).

  [ Ricardo Diaz ]
  * New upstream version (3.99.3.1):
    - Update Spanish translation file.

  [ Mike Gabriel ]
  * New upstream version (3.99.3.1):
    - Update German translation file.

  [ Terje Andersen ]
  * New upstream version (3.99.3.1):
    - Update Bokmal (Norway) translation file.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 Nov 2012 16:26:49 +0100

x2goclient (3.99.3.0-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.3.0):
    - Rebuild i18n files, add x2goclient_dk.ts for the new
      Danish translator (Christoffer Krakou).
    - Update German translation.
    - Run X2Go-proxied RDP session with fullscreen mode as sessions
      of X2Go session type "D". (Closes upstream issue #22)
    - Allow pass-through of username and password for X2Go-proxied RDP
      sessions. The strings X2GO_USER and X2GO_PASSWORD in rdpoptions
      will be replaced by username+password enter into X2Go Clients
      login dialog. Only replace username+password if they received a
      value from the login widget of the main window.
    - Drop i18n idea to translate English to English.
    - Fix creation of session profile icon on desktop. The .desktop
      files need the x-bit set. Also: add a compatibility profile name